# cpp-2020-bigint

./: CMakeLists.txt  main.cpp  readme.md
src/: big_int.cpp  big_int.h
tests/: add.txt  div.txt  equal.txt  generate_tests.py  greater.txt  less.txt  mul.txt  run_tests.cpp  sub.txt
